--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </a>                        
                     </nav>
 
-                    <a href="#" class="btn__whats">
+                    <a href="https://wa.me/5511997796354" class="btn__whats" target="_blank">
                         <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                         Entre em contato
                     </a>
@@ -97,15 +97,15 @@
                                 </nav>                                
 
                                 <div class="overlay__social d-flex justify-content-between">                                    
-                                    <a href="" target="_blank">
+                                    <a href="https://www.instagram.com/lajefacil" target="_blank">
                                         <img src="assets/img/icon-insta.svg" alt="Instagram" target="_blank" >
                                     </a>
-                                    <a href="" target="_blank">
+                                    <a href="https://wa.me/5511997796354" target="_blank">
                                         <img src="assets/img/icon-whats-2.svg" alt="Whatsapp" target="_blank" >
                                     </a>                                    
                                 </div>
 
-                                <a href="#" class="btn__whats">
+                                <a href="https://wa.me/5511997796354" class="btn__whats" target="_blank">
                                     <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                                     Entre em contato
                                 </a>
@@ -229,7 +229,7 @@
             <h2 class="title">
                 Obra mais rápida e econômica
             </h2>
-            <a href="" class="button">
+            <a href="https://wa.me/5511997796354" class="button" target="_blank">
                 <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                 Entre em contato
             </a>
@@ -329,7 +329,7 @@
                     <p class="text">
                         Estamos prontos para transformar o seu projeto em realidade!
                     </p>
-                    <a href="" class="button">
+                    <a href="https://wa.me/5511997796354" class="button" target="_blank">
                         <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                         Entre em contato
                     </a>
@@ -343,7 +343,7 @@
             <img src="assets/img/title-center-orange.svg" class="title__detail" alt="">
             <h2 class="title"> Com a <span>Laje Fácil</span> você garante mais economia, menos desperdício e uma obra mais eficiente!</h2>
             <p class="description">Fale com a gente agora mesmo e solicite o orçamento da Laje Fácil para a sua obra!</p>
-            <a href="" class="button">
+            <a href="https://wa.me/5511997796354" class="button" target="_blank">
                 <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
                 Fale conosco
             </a>
@@ -357,27 +357,27 @@
                 <h2 class="title">Obras</h2>
                 <h3 class="subtitle">Projetos realizados</h3>
             </div>
-            <a href="#" class="button">
+            <a href="#" class="button" target="_blank">
                 <img src="assets/img/icon-insta-orange.svg" class="icon" alt="Instagram">
                 Veja mais
             </a>
 
             <div class="links">
-                <a href="https://www.instagram.com/p/DCE0hswxd_D/" class="card__video">
+                <a href="https://www.instagram.com/p/DCE0hswxd_D/" class="card__video" target="_blank">
                     <img src="assets/img/video-1.png" class="cover" alt="Vídeo">
                     <div class="caption">
                         <h2 class="title">Confirmar</h2>
                         <img src="assets/img/icon-play.svg" class="icon" alt="Assistir">
                     </div>
                 </a>
-                <a href="https://www.instagram.com/p/DDPcp11uhpe/" class="card__video">
+                <a href="https://www.instagram.com/p/DDPcp11uhpe/" class="card__video" target="_blank">
                     <img src="assets/img/video-2.png" class="cover" alt="Vídeo">
                     <div class="caption">
                         <h2 class="title">Bragança Paulista - SP</h2>
                         <img src="assets/img/icon-play.svg" class="icon" alt="Assistir">
                     </div>
                 </a>
-                <a href="https://www.instagram.com/p/DDw7W0LONte/" class="card__video">
+                <a href="https://www.instagram.com/p/DDw7W0LONte/" class="card__video" target="_blank">
                     <img src="assets/img/video-3.png" class="cover" alt="Vídeo">
                     <div class="caption">
                         <h2 class="title">Serra da Catareira - SP</h2>
@@ -389,6 +389,16 @@
         
     </section>
 
+    <section class="page__cta-3" id="contato">
+        <div class="wrapper">
+            <h2 class="title">Agilize agora a construção do seu projeto</h2>
+            <a href="https://wa.me/5511997796354" class="button" target="_blank">
+                <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                Entre em contato
+            </a>
+        </div>
+    </section>
+
     <footer class="page__footer" id="contato">
         <div class="footer__content">
             <div class="wrapper">
@@ -397,10 +407,10 @@
                         <img src="assets/img/logo-footer.png" class="logo__footer" alt="Logo Laje Fácil">
                     </a>
                     <div class="links__social">
-                        <a href="https://www.instagram.com/escinformaticago/" class="link" target="_blank">
+                        <a href="https://www.instagram.com/lajefacil" class="link" target="_blank">
                             <img src="assets/img/icon-insta.svg" alt="Instagram">
                         </a>                     
-                        <a href="https://wa.me/5562982702109" class="link" target="_blank">
+                        <a href="https://wa.me/5511997796354" class="link" target="_blank">
                             <img src="assets/img/icon-whats.svg" alt="Whatsapp">
                         </a>
                     </div>
@@ -425,18 +435,18 @@
                 <div class="footer__contacts">
                     <div class="link__contact">
                         <img src="assets/img/icon-phone.svg" class="icon__contact" alt="Ícone de Telefone">
-                        <a href="tel:55" class="contact" target="_blank"></a>
+                        <a href="tel:5511997796354" class="contact" target="_blank">(11) 99779-6354</a>
                     </div>
                     <div class="link__contact">
                         <img src="assets/img/icon-mail.svg" class="icon__contact" alt="Ícone de Envelope">                        
-                        <a href="mailto:" class="contact" target="_blank"></a>
+                        <a href="mailto:contatolajefacil@gmail.com" class="contact" target="_blank">contatolajefacil@gmail.com</a>
                     </div>
                     <div class="link__contact">
                         <img src="assets/img/icon-location.svg" class="icon__contact" alt="Ícone de Localização">
-                        <a href="" class="contact" target="_blank">
+                        <a href="https://maps.app.goo.gl/8xNTqY8yrKZoKKAA9" class="contact" target="_blank">Rua Maria Gaspar Teixeira nº 7<br>Laranjeiras, Caieiras - SP<br>07747-285
                         </a>
                     </div>
-                    <p class="contact__info">Horário de atendimento:<br>Seg a Sex das 08:00 às 18:00</p>
+                    <p class="contact__info">Horário de atendimento:<br>Seg a Sáb das 08:00 às 18:00</p>
                 </div>
             </div>
         </div>
@@ -445,11 +455,14 @@
                 <p class="copyrights">
                     Laje Fácil © Todos os direitos reservados
                 </p>
+                <a href="https://www.instagram.com/escinformaticago/" class="logo__esc" target="_blank">
+                    <img src="assets/img/logo-esc.png" class="logo" alt="Logo ESC Informática">
+                </a>
             </div>
         </div>
     </footer>
 
-    <a href="" class="float__whatsapp" target="_blank">
+    <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats-white.svg" alt="whatsapp">
     </a>
 
