--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             </nav>   
                             
                             <a href="#" class="button" target="_blank">
-                                <img src="assets/img/icon-whats.svg" class="icon" alt="Usuário">
+                                <img src="assets/img/icon-user.svg" class="icon" alt="Usuário">
                                 Já sou cliente
                             </a>
 
@@ -130,7 +130,126 @@
         </div>
     </div>
 
-   
+    <div class="page__numbers">
+        <div class="wrapper">
+            <div class="info__box">
+                <p class="number">75%</p>
+                <p class="info">dos consumidores acreditam que os chatbots melhoram o atendimento ao cliente.</p>
+            </div>
+            <div class="info__box">
+                <p class="number">90%</p>
+                <p class="info">das interações com bots resolvem chamados em até 10 mensagens, garantindo mais agilidade.</p>
+            </div>
+            <div class="info__box">
+                <p class="number">30%</p>
+                <p class="info">é a economia média nos custos de atendimento ao cliente ao adotar chatbots.</p>
+            </div>
+            <div class="info__box">
+                <p class="number">55%</p>
+                <p class="info">das empresas que usam chatbots geram leads de maior qualidade graças à automação inteligente.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="page__functions" id="funcionalidades">
+        <div class="wrapper">
+            <h2 class="title">
+                Funcionalidades
+                <img src="assets/img/title-detail.svg" class="icon__title" alt="">
+            </h2>
+            <p class="subtitle">Descubra tudo que a Tech Chat <span>pode fazer por você</span></p>
+
+            <div class="shell shell-1">
+                <div class="content">
+                    <h3 class="content__title">Atendimento <span>WhatsApp</span> com múltiplos atendentes.</h3>
+                    <p class="content__subtitle">Venda diretamente nos canais que seus clientes mais utilizam, da pesquisa à <span>conclusão da compra.</span></p>
+
+                    <div class="functions__list">
+                        <div class="item">
+                            <img src="assets/img/icon-function-1-1.svg" class="icon" alt="">
+                            <p class="text">Centralize todas as conversas em uma <span>única interface</span>, garantindo <span>agilidade e organização.</span></p>
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/icon-function-1-2.svg" class="icon" alt="">
+                            <p class="text">Distribua os atendimentos de <span>maneira estratégica</span> entre as lojas físicas e equipe de vendas.</p>
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/icon-function-1-3.svg" class="icon" alt="">
+                            <p class="text">Crie <span>campanhas impactantes</span> com disparos em massa e alcance <span>resultados surpreendentes.</span></p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="button">
+                        <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                        Fale conosco
+                    </a>
+
+                </div>
+
+                <img src="assets/img/cover-function-1.png" class="cover" alt="Aplicativo Tech Chat">
+            </div>
+
+            <div class="shell shell-2">
+                <img src="assets/img/cover-function-2.png" class="cover" alt="Aplicativo Tech Chat">
+
+                <div class="content">
+                    <h3 class="content__title">Automatize suas vendas com <span>Inteligência</span></h3>
+                    <p class="content__subtitle">Garanta <span>respostas rápidas</span> com chatbots e suporte humano <span>sempre à disposição.</span></p>
+
+                    <div class="functions__list">
+                        <div class="item">
+                            <img src="assets/img/icon-function-2-1.svg" class="icon" alt="">
+                            <p class="text">Automatize <span>mais de 50%</span> dos atendimentos, incluindo consultas de pedidos e respostas a dúvidas.</span></p>
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/icon-function-2-2.svg" class="icon" alt="">
+                            <p class="text">Aproveite os benefícios da Inteligência Artificial para <span>aumentar a eficiência</span> da sua equipe e <span>reduzir custos</span>.</p>
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/icon-function-3-3.svg" class="icon" alt="">
+                            <p class="text">Ofereça uma <span>experiência de excelência</span> aos clientes e fortaleça a presença da sua marca.</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="button">
+                        <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                        Fale conosco
+                    </a>
+
+                </div>                
+            </div>
+
+            <div class="shell shell-3">
+
+                <div class="content">
+                    <h3 class="content__title">Um único número, <span>atendimento ilimitado</span></h3>
+                    <p class="content__subtitle">Centralize sua comunicação e conecte sua equipe para oferecer um <span>atendimento eficiente, automatizado e sem complicações</span>.</p>
+
+                    <div class="functions__list">
+                        <div class="item">
+                            <img src="assets/img/icon-function-3-1.svg" class="icon" alt="">
+                            <p class="text"><span>Atendimento simultâneo e automático:</span> Responda a vários clientes ao mesmo tempo sem demora, proporcionando uma <span>experiência ágil e personalizada.</span></p>
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/icon-function-2-2.svg" class="icon" alt="">
+                            <p class="text"><span>Automatização inteligente:</span> Crie fluxos de conversas automatizadas e garanta que nenhum cliente fique sem resposta. <span>Nunca perca uma oportunidade de engajamento!</span></p>
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/icon-function-3-3.svg" class="icon" alt="">
+                            <p class="text"><span>Organização e eficiência:</span> Gerencie sua <span>equipe de forma organizada, com setores dedicados</span> e transferências de conversas entre atendentes sempre que necessário.</p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="button">
+                        <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                        Fale conosco
+                    </a>
+                </div>                 
+                
+                <img src="assets/img/cover-function-3.png" class="cover" alt="Aplicativo Tech Chat">
+            </div>
+        </div>
+    </div>
 
     <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats.svg" alt="whatsapp">
