--- a/index.html
+++ b/index.html
@@ -251,6 +251,235 @@
         </div>
     </div>
 
+    <div class="page__benefits" id="vantagens">
+        <div class="wrapper">
+            <h2 class="title">
+                Vantagens
+                <img src="assets/img/title-detail-2.svg" class="icon__title" alt="">
+            </h2>
+            <p class="subtitle">Conheça todos os <span>benefícios</span> que nosso chat oferece</p>
+            <div class="cards--desktop">
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-1.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Chatbot</h3>
+                    <p class="card__text">Personalize seu atendimento automatizado com nosso robô inteligente, projetado para ser o melhor do mercado.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-2.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Mensagens Ilimitadas</h3>
+                    <p class="card__text">Envie e receba mensagens ilimitadas entre o chatbot (ou atendente) e o cliente, sem restrições.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-3.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Múltiplos Canais</h3>
+                    <p class="card__text">Centralize diversos atendentes em um único número, oferecendo um atendimento integrado e eficiente.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-4.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Múltiplos Atendentes</h3>
+                    <p class="card__text">Organize atendentes por departamentos e crie formas de distribuição personalizadas.</p>
+                </div>
+
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-5.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Envios em Massa</h3>
+                    <p class="card__text">Envie mensagens em grande escala de forma rápida e fácil com nosso sistema de envio simples de configurar.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-6.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Modo Privado</h3>
+                    <p class="card__text">Restrinja o acesso a conversas específicas, garantindo privacidade total. Ideal para administradores.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-7.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Identificação do Atendente</h3>
+                    <p class="card__text">Personalize o atendimento exibindo o nome do atendente durante a interação com o cliente.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-8.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Grupos de Contatos</h3>
+                    <p class="card__text">Melhore a organização classificando seus contatos em grupos, facilitando o gerenciamento e o atendimento.</p>
+                </div>
+
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-9.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Leads</h3>
+                    <p class="card__text">Capture informações como nome, e-mail e telefone a cada interação para usar em suas estratégias de marketing.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-10.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Troca de Arquivos</h3>
+                    <p class="card__text">Envie textos, áudios, imagens e documentos com o chatbot ou atendentes.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-11.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Múltiplos Fluxos</h3>
+                    <p class="card__text">Crie e gerencie fluxos de conversa para orientar os visitantes por diálogos personalizados e ramificados.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-12.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Jornada dos Atendentes</h3>
+                    <p class="card__text">Controle o acesso à plataforma UnderChat com base na carga horária de cada atendente.</p>
+                </div>
+
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-13.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Histórico de Conversas</h3>
+                    <p class="card__text">Registre e armazene todas as interações, incluindo dados do usuário e detalhes do atendimento.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-14.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Avaliação de Atendimento</h3>
+                    <p class="card__text">Realize pesquisas ao final do atendimento e atribua pontuações ao chatbot e aos atendentes.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-15.svg" class="card__icon" alt="">
+                    <h3 class="card__title">Chat ao Vivo</h3>
+                    <p class="card__text">Direcione o atendimento para um atendente humano com base em regras, departamentos e roteamento personalizado.</p>
+                </div>
+
+                <div class="benefit__card">
+                    <img src="assets/img/icon-benefit-16.svg" class="card__icon" alt="">
+                    <h3 class="card__title">API de Integração</h3>
+                    <p class="card__text">Integre o chatbot aos sistemas da sua empresa de forma prática, com suporte a Push, Pull e Web Services personalizados.</p>
+                </div>
+            </div>
+
+            <div class="cards--mobile">
+
+                <div class="owl-carousel owl-theme benefits__carousel">
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-1.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Chatbot</h3>
+                            <p class="card__text">Personalize seu atendimento automatizado com nosso robô inteligente, projetado para ser o melhor do mercado.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-2.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Mensagens Ilimitadas</h3>
+                            <p class="card__text">Envie e receba mensagens ilimitadas entre o chatbot (ou atendente) e o cliente, sem restrições.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-3.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Múltiplos Canais</h3>
+                            <p class="card__text">Centralize diversos atendentes em um único número, oferecendo um atendimento integrado e eficiente.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-4.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Múltiplos Atendentes</h3>
+                            <p class="card__text">Organize atendentes por departamentos e crie formas de distribuição personalizadas.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-5.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Envios em Massa</h3>
+                            <p class="card__text">Envie mensagens em grande escala de forma rápida e fácil com nosso sistema de envio simples de configurar.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-6.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Modo Privado</h3>
+                            <p class="card__text">Restrinja o acesso a conversas específicas, garantindo privacidade total. Ideal para administradores.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-7.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Identificação do Atendente</h3>
+                            <p class="card__text">Personalize o atendimento exibindo o nome do atendente durante a interação com o cliente.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-8.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Grupos de Contatos</h3>
+                            <p class="card__text">Melhore a organização classificando seus contatos em grupos, facilitando o gerenciamento e o atendimento.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-9.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Leads</h3>
+                            <p class="card__text">Capture informações como nome, e-mail e telefone a cada interação para usar em suas estratégias de marketing.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-10.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Troca de Arquivos</h3>
+                            <p class="card__text">Envie textos, áudios, imagens e documentos com o chatbot ou atendentes.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-11.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Múltiplos Fluxos</h3>
+                            <p class="card__text">Crie e gerencie fluxos de conversa para orientar os visitantes por diálogos personalizados e ramificados.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-12.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Jornada dos Atendentes</h3>
+                            <p class="card__text">Controle o acesso à plataforma UnderChat com base na carga horária de cada atendente.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-13.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Histórico de Conversas</h3>
+                            <p class="card__text">Registre e armazene todas as interações, incluindo dados do usuário e detalhes do atendimento.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-14.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Avaliação de Atendimento</h3>
+                            <p class="card__text">Realize pesquisas ao final do atendimento e atribua pontuações ao chatbot e aos atendentes.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-15.svg" class="card__icon" alt="">
+                            <h3 class="card__title">Chat ao Vivo</h3>
+                            <p class="card__text">Direcione o atendimento para um atendente humano com base em regras, departamentos e roteamento personalizado.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="benefit__card">
+                            <img src="assets/img/icon-benefit-16.svg" class="card__icon" alt="">
+                            <h3 class="card__title">API de Integração</h3>
+                            <p class="card__text">Integre o chatbot aos sistemas da sua empresa de forma prática, com suporte a Push, Pull e Web Services personalizados.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats.svg" alt="whatsapp">
     </a>
@@ -263,11 +492,11 @@
     <script src="assets/libs/owl.carousel.min.js"></script>
     <script> 
 
-        $('.plans__carousel').owlCarousel({
+        $('.benefits__carousel').owlCarousel({
             loop: true,
             nav: false,
             dots: true,
-            stagePadding: 30,                      
+            stagePadding: 60,                      
                         
             responsive:{
                 0: {
