--- a/index.html
+++ b/index.html
@@ -480,6 +480,73 @@
         </div>
     </div>
 
+    <div class="page__plans" id="planos">
+        <div class="wrapper">
+            <h2 class="title">
+                Planos
+                <img src="assets/img/title-detail-2.svg" class="icon__title" alt="">
+            </h2>
+            <p class="subtitle">Encontre o plano perfeito para o <span>seu negócio</span></p>
+
+            <div class="plans__cards">
+                
+                <div class="plan__card">
+                    <h3 class="card__title">Starter</h3>
+                    <div class="card__content">
+                        <div class="price">
+                            <div class="value">
+                                <span class="coin">R$</span>
+                                <span class="number">99,</span>
+                                <span class="cents">90</span>
+                            </div>
+                            <span class="info">/mês</span>
+                        </div>
+                        <div class="list">
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                1 Conexão
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                3 Usuários
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                3 Setores
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Agendamento
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-check.svg" class="icon" alt="">
+                                Criador de automações: incluso 1 fluxo criado pela equipe de suporte
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-no.svg" class="icon" alt="">
+                                Integrações
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-no.svg" class="icon" alt="">
+                                Campanhas
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-no.svg" class="icon" alt="">
+                                DM Instagram Conectada
+                            </p>
+                            <p class="item">
+                                <img src="assets/img/icon-no.svg" class="icon" alt="">
+                                Api Externa
+                            </p>
+                        </div>
+                    </div>
+                    <span class="description">Ideal para pequenos negócios</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <a href="https://wa.me/5511997796354" class="float__whatsapp" target="_blank">
         <img src="assets/img/icon-whats.svg" alt="whatsapp">
     </a>
